--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@nuxt/devtools": "latest",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "nuxt": "^3.7.4",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   }
