--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "prettier-plugin-tailwindcss": "^0.5.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@nuxt/http": "^0.6.4"
   }
 }
