--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "@nuxt/http": "^0.6.4"
+    "@nuxt/http": "^0.6.4",
+    "@pinia/nuxt": "^0.5.1",
+    "pinia": "^2.1.7"
   }
 }
